Fix tests and increase code cov
Signed-off-by: Derek Ho <dxho@amazon.com>